tests/mm0_mmu/fail/bad-sort1324.mm0
-- bad modifier order
pure provable strict free sort s1324;